[tool.poetry]
name = "app"
version = "0.1.0"
description = "PDF application"
authors = ["Richard Capraro <richard.capraro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.34.11"
botocore = "1.34.11"
celery="5.3.6"
click="8.1.7"
Flask="2.3.1"
flask_sqlalchemy="3.0.3"
flask_cors="4.0.0"
langchain="0.0.353"
openai="1.6.1"
python-dotenv="1.0.0"
Werkzeug="2.3.1"
invoke="2.2.0"
pinecone-client="2.2.4"
pypdf="3.17.4"
watchdog="3.0.0"
tiktoken="0.5.2"
uuid="1.30"
langfuse="2.3.0"
backoff="2.2.1"
redis="5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
